fixes the problem of project card labels/tags overflowing when there are two many or all of them

--- a/public/main.css
+++ b/public/main.css
@@ -572,9 +572,10 @@ input[type=submit]:hover {
 .filter-container {
     /*position: relative;*/
     display: inline-block;
-    min-width: 200px;
-    max-width: 250px;
+    /*min-width: 200px;*/
+    /*max-width: 250px;*/
     width: 250px;
+    height: 350px;
     border-radius: 3px;
     margin: 10px 0px 0px 10px;
     padding: 0 20px 20px 10px;
@@ -590,14 +591,15 @@ input[type=submit]:hover {
     flex-wrap: wrap;
     flex-direction: row;
     width: 80%;
-    height: 350px;
+    /*height: 350px;*/
 }
 
 .post{
     background-color: rgb(206, 223, 199);
     display: inline-block;
     width: 420px;
-    height: 370px;
+    height: 450px;
+    /*min-height: auto;*/
     border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
     margin-bottom: 20px;
@@ -639,6 +641,9 @@ input[type=submit]:hover {
 .post-tags-container {
     margin-top: 5px;
     margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: stretch;
 }
 
 .project_label {
